# quest-old

./: .gitignore  Cargo.toml  README  README.md  notes
_src/: lib.rs
_src/collections/: mod.rs
_src/env/: binding.rs  builtins.rs  mod.rs
_src/parse/: mod.rs
_src/shared/: mod.rs  shared.rs
code/: foo.qs  frac.qs  guess.qs  old.qs  test.qs
rquest/: README.md  block.rb  delegator.rb  main.rb  methods.rb  patches.rb  rq.rb
rquest/examples/: guessing.rb  misc.rb
ruby/: attributes.rb  main.rb  quest.rb
ruby/examples/: frac.rb  frac_old.rb  frac_old2.rb  guessing.rb  guessing_reduced.rb  guessing_simpler.rb  util.rb
ruby/objects/: all.rb  block.rb  boolean.rb  list.rb  map.rb  null.rb  number.rb  object.rb  pristine.rb  text.rb  var.rb
rust/: Cargo.toml
rust/code/: foo.qs  frac.qs  old_test.qs
src/: collections.rs  env.rs  err.rs  error.rs  lib.rs  macros.rs  main.rs  map.rs  object.rs  object_old.rs  parse.rs  shared.rs  tmp.rs  util.rs
src/builtins/: flow.rs  io.rs  mod.rs
src/collections/: list.rs  map.rs  parental.rs
src/env/: binding.rs  builtins.rs  current.rs  env.rs  mod.rs  parse.rs  scope.rs  stack.rs  stream.rs
src/map/: parentmap.rs
src/obj_/: macros.rs  mod.rs
src/object/: data.rs  data_mapping.rs  literal.rs  map.rs  object.rs  ops.rs  type.rs  typed.rs  types.rs
src/parse/: err.rs  error.rs  funcs.rs  impls.rs  mod.rs  opers.rs  parsable.rs  parser.rs  parsers.rs  result.rs  stream.rs  token.rs  tokenmatch.rs  tokens.rs  tree.rs  (+1 more)
src_/: lib.rs  macros.rs  main.rs
src__/: lib.rs  main.rs
src_working/: main.rs  tmp.rs
(+150 files in other folders)
