[package]
name = "quest"
version = "0.2.4"
authors = ["sam <westerhack@gmail.com>"]
edition = "2018"

[features]
default = ["single-threaded"]
single-threaded = []
fine-debug = []

[dependencies]
lazy_static = "1.1.0"
mopa = "0.2"
libc = "0.2"
#regex = { version = "1.0", features = ["pattern"] }
log = "0.4"
env_logger = "0.5"
rand = "=0.6.0"